# ignite

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  MIGRATION.md  Makefile  NOTICE  PLAN.md  PRODUCTION_ROADMAP.md  README.md  SECURITY.md  STATUS.md  VAJRA.md  ZELOX.md  compose.yml  deny.toml  install.sh  pyproject.toml
crates/sail-cli/: Cargo.toml
crates/sail-cli/src/: main.rs  runner.rs
crates/sail-cli/src/spark/: mcp_server.rs  mod.rs  run.rs  server.rs  shell.rs
crates/sail-flight/: Cargo.toml
crates/sail-flight/src/: lib.rs
crates/sail-physical-plan/: Cargo.toml
crates/sail-physical-plan/src/: barrier.rs  catalog_command.rs  file_write.rs  map_partitions.rs  merge_cardinality_check.rs  monotonic_id.rs  range.rs  repartition.rs  schema_pivot.rs  show_string.rs  spark_partition_id.rs
crates/sail-physical-plan/src/streaming/: barrier_align.rs  collector.rs  dedup.rs  exchange.rs  filter.rs  limit.rs  mod.rs  source_adapter.rs  state_io.rs  stream_join.rs  watermark.rs  window_accum.rs
crates/sail-python-udf/: Cargo.toml
crates/sail-python-udf/src/: lib.rs  worker.rs
crates/sail-python-udf/src/cereal/: mod.rs
crates/sail-python-udf/src/python/: spark.py  udf_worker.py
crates/sail-python-udf/src/udf/: pyspark_cogroup_map_udf.rs  pyspark_group_map_udf.rs  pyspark_udf.rs  pyspark_unresolved_udf.rs
crates/zelox-cache/: Cargo.toml
crates/zelox-cache/src/: error.rs  file_statistics_cache.rs
crates/zelox-catalog/: Cargo.toml
crates/zelox-catalog-glue/: Cargo.toml
crates/zelox-catalog-glue/src/: data_type.rs  hive.rs  iceberg.rs  provider.rs
crates/zelox-catalog-glue/tests/: database_tests.rs  table_tests.rs  view_tests.rs
crates/zelox-catalog-glue/tests/common/: mod.rs
crates/zelox-catalog-glue/tests/table_view_common/: mod.rs
crates/zelox-catalog-hms/: Cargo.toml
crates/zelox-catalog-hms/src/: convert.rs  data_type.rs  provider.rs
crates/zelox-catalog-hms/src/security/: gssapi.rs  thrift_sasl.rs
crates/zelox-catalog-hms/tests/: database_tests.rs  failover_tests.rs  kerberos_integration_tests.rs  table_tests.rs  view_tests.rs
crates/zelox-catalog-hms/tests/common/: mod.rs
crates/zelox-catalog-memory/: Cargo.toml
crates/zelox-catalog-memory/src/: provider.rs
crates/zelox-catalog-onelake/: Cargo.toml
crates/zelox-catalog-onelake/src/: provider.rs
crates/zelox-catalog-system/: Cargo.toml
crates/zelox-catalog-system/src/: physical_plan.rs  predicate.rs  provider.rs  service.rs  table_source.rs
crates/zelox-catalog/src/: command.rs  temp_view.rs
crates/zelox-catalog/src/manager/: database.rs  mod.rs  table.rs  view.rs
crates/zelox-catalog/src/provider/: cache.rs  mod.rs  options.rs  runtime.rs
crates/zelox-cli/: Cargo.toml
crates/zelox-cli/src/: main.rs  python.rs  runner.rs
crates/zelox-cli/src/flight/: server.rs
crates/zelox-cli/src/python/: spark_mcp_server.py  spark_run.py  spark_shell.py
crates/zelox-cli/src/spark/: mcp_server.rs  mod.rs  run.rs  server.rs  shell.rs
crates/zelox-cli/src/worker/: entrypoint.rs
crates/zelox-data-source/: Cargo.toml  build.rs
crates/zelox-data-source/src/: streaming_decode.rs  streaming_sink_log.rs
crates/zelox-data-source/src/formats/: file_stream.rs
crates/zelox-data-source/src/listing/: source.rs  utils.rs
crates/zelox-data-source/src/options/: mod.rs
crates/zelox-execution/: Cargo.toml  build.rs
crates/zelox-execution/src/: codec.rs  job_runner.rs  lib.rs  rpc.rs
crates/zelox-execution/src/driver/: client.rs  event.rs  mod.rs  options.rs  output.rs  server.rs
crates/zelox-execution/src/job_graph/: planner.rs
crates/zelox-execution/src/plan/: mod.rs  shuffle_read.rs  shuffle_write.rs
crates/zelox-execution/src/stream/: error.rs  mod.rs
crates/zelox-execution/src/stream_accessor/: core.rs  mod.rs
crates/zelox-flight/: Cargo.toml
crates/zelox-flight/src/: lib.rs  metrics.rs  service.rs  session.rs  state.rs
crates/zelox-gold-test/: Cargo.toml
crates/zelox-logical-plan/: Cargo.toml
crates/zelox-logical-plan/src/: barrier.rs  file_delete.rs  file_write.rs  map_partitions.rs  merge.rs  monotonic_id.rs  range.rs  schema_pivot.rs  show_string.rs  sort.rs  spark_partition_id.rs
crates/zelox-physical-optimizer/: Cargo.toml
crates/zelox-physical-optimizer/src/: barrier.rs  collect_left.rs  explicit_repartition.rs  lib.rs
crates/zelox-physical-plan/: Cargo.toml
crates/zelox-physical-plan/src/: barrier.rs  catalog_command.rs  file_delete.rs  file_write.rs  map_partitions.rs  monotonic_id.rs  range.rs  row_level_write.rs  schema_pivot.rs  show_string.rs  spark_partition_id.rs
crates/zelox-plan/: Cargo.toml
crates/zelox-plan-lakehouse/: Cargo.toml
crates/zelox-plan-lakehouse/src/: lib.rs  optimizer.rs
crates/zelox-plan/src/: catalog.rs  config.rs  error.rs  explain.rs  formatter.rs  lib.rs
crates/zelox-python/: Cargo.toml
crates/zelox-python-udf/: Cargo.toml
crates/zelox-python-udf/src/: error.rs  stream.rs  worker.rs
crates/zelox-python/src/: cli.rs  globals.rs  lib.rs
crates/zelox-server/: Cargo.toml
crates/zelox-server/src/: actor.rs  builder.rs  lib.rs  retry.rs
crates/zelox-session/: Cargo.toml
crates/zelox-session/src/: catalog.rs  error.rs  foreach_batch_exec.rs  formats.rs  lib.rs  memory_sink_exec.rs  observable.rs  optimizer.rs  planner.rs  runtime.rs
crates/zelox-spark-connect/: Cargo.toml  build.rs
crates/zelox-spark-connect/src/: config.rs  debug.rs  entrypoint.rs  error.rs  lib.rs  schema.rs  server.rs  session.rs  session_manager.rs  streaming.rs  web_ui.rs
crates/zelox-sql-analyzer/: Cargo.toml
crates/zelox-sql-analyzer/src/: data_type.rs  error.rs  expression.rs  parser.rs  query.rs  statement.rs  value.rs
crates/zelox-sql-parser/: Cargo.toml
crates/zelox-sql-parser/data/: keywords.txt
crates/zelox-sql-parser/src/: token.rs
crates/zelox-sql-parser/tests/: syntax.rs
crates/zelox-vortex/: Cargo.toml
crates/zelox-vortex/src/: lib.rs
python/zelox_pyspark/: README.md  pyproject.toml
(+1363 files in other folders)
