[package]
name = "sail-cli"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "vajra"
path = "src/main.rs"

[features]
# mimalloc improves throughput for pure Rust workloads but causes re-entrant
# mi_malloc_generic recursion when PyO3 runs Python UDFs on Tokio worker threads.
# Keep disabled by default; users can opt-in with --features mimalloc if they
# do not use Python UDFs and want the allocator performance benefit.
mimalloc = ["dep:mimalloc"]
default = []

[dependencies]
sail-common = { path = "../sail-common" }
sail-execution = { path = "../sail-execution" }
sail-flight = { path = "../sail-flight" }
sail-telemetry = { path = "../sail-telemetry" }
sail-spark-connect = { path = "../sail-spark-connect" }
sail-session = { path = "../sail-session" }

mimalloc = { workspace = true, optional = true }
clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
rustls = { workspace = true }
tempfile = { workspace = true }
