[package]
name = "sail-cli"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "vajra"
path = "src/main.rs"

[features]
# mimalloc improves throughput for pure Rust workloads but causes re-entrant
# mi_malloc_generic recursion when PyO3 runs Python UDFs on Tokio worker threads.
# Keep disabled by default; users can opt-in with --features mimalloc if they
# do not use Python UDFs and want the allocator performance benefit.
mimalloc = ["dep:mimalloc"]
# jemalloc = OPT-IN (returns freed pages to the OS via decay). MEASURED 2026-07-01 it is NOT the memory
# fix: controlled A/B on a bounded windowed-agg showed glibc 2.07 vs jemalloc 2.03 GiB (~identical) and
# jemalloc decay-on/off 1.76 vs 1.78 GiB — i.e. the streaming RSS gap is LIVE in-flight buffering, NOT
# allocator retention. Kept opt-in as a minor complementary optimization (no UDF re-entrancy risk when
# off). The REAL fix = bound in-flight memory via DataFusion MemoryPool + credit-backpressure + F5 spill
# (Flink managed-memory analog, Arrow-native). See docs/design/streaming-memory-boundedness.md.
jemalloc = ["dep:tikv-jemallocator"]
default = []

[dependencies]
sail-common = { path = "../sail-common" }
sail-execution = { path = "../sail-execution" }
sail-flight = { path = "../sail-flight" }
sail-telemetry = { path = "../sail-telemetry" }
sail-spark-connect = { path = "../sail-spark-connect" }
sail-session = { path = "../sail-session" }

mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
clap = { workspace = true }
pprof = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
rustls = { workspace = true }
tempfile = { workspace = true }
