[package]
name = "sail-flight"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-plan = { path = "../sail-plan" }
sail-server = { path = "../sail-server" }
sail-sql-analyzer = { path = "../sail-sql-analyzer" }
sail-session = { path = "../sail-session" }
sail-telemetry = { path = "../sail-telemetry" }

arrow = { workspace = true }
arrow-flight = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
