[package]
name = "sail-physical-plan"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-catalog = { path = "../sail-catalog" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-logical-plan = { path = "../sail-logical-plan" }

async-stream = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
object_store = { workspace = true }
