[package]
name = "sail-python-udf"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }

thiserror = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
educe = { workspace = true }
arrow-pyarrow = { workspace = true }
pyo3 = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
num-bigint = { workspace = true }
md-5 = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
