[package]
name = "zelox-catalog-onelake"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
zelox-common-datafusion = { path = "../zelox-common-datafusion" }
zelox-catalog = { path = "../zelox-catalog" }

arrow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
