[package]
name = "zelox-catalog"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
moka = { workspace = true }
log = { workspace = true }

zelox-common-datafusion = { path = "../zelox-common-datafusion" }
zelox-common = { path = "../zelox-common" }
