[package]
name = "zelox-execution"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
zelox-common = { path = "../zelox-common" }
zelox-common-datafusion = { path = "../zelox-common-datafusion" }
zelox-catalog = { path = "../zelox-catalog" }
zelox-data-source = { path = "../zelox-data-source" }
zelox-server = { path = "../zelox-server" }
zelox-python-udf = { path = "../zelox-python-udf" }
zelox-delta-lake = { path = "../zelox-delta-lake" }
zelox-iceberg = { path = "../zelox-iceberg" }
zelox-function = { path = "../zelox-function" }
zelox-logical-plan = { path = "../zelox-logical-plan" }
zelox-physical-plan = { path = "../zelox-physical-plan" }
zelox-telemetry = { path = "../zelox-telemetry" }
zelox-catalog-system = { path = "../zelox-catalog-system" }

thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-types = { workspace = true }
fastrace = { workspace = true }
tower = { workspace = true }
prost = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
object_store = { workspace = true }
datafusion-spark = { workspace = true }
arrow-flight = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
readonly = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }
