[package]
name = "zelox-gold-test"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
zelox-spark-connect = { path = "../zelox-spark-connect" }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
