[package]
name = "zelox-physical-optimizer"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
zelox-physical-plan = { path = "../zelox-physical-plan" }

datafusion = { workspace = true }
datafusion-physical-expr = { workspace = true }
log = { workspace = true }
