[package]
name = "zelox-spark-connect"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
zelox-cache = { path = "../zelox-cache" }
zelox-common = { path = "../zelox-common" }
zelox-common-datafusion = { path = "../zelox-common-datafusion" }
zelox-data-source = { path = "../zelox-data-source" }
zelox-server = { path = "../zelox-server" }
zelox-plan = { path = "../zelox-plan" }
zelox-python-udf = { path = "../zelox-python-udf" }
zelox-sql-analyzer = { path = "../zelox-sql-analyzer" }
zelox-execution = { path = "../zelox-execution" }
zelox-session = { path = "../zelox-session" }

thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
uuid = { workspace = true }
datafusion = { workspace = true }
async-stream = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = "2.6"
monostate = { workspace = true }
regex = { workspace = true }
phf = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
fastrace = { workspace = true }
pyo3 = { workspace = true }
secrecy = { workspace = true }
axum = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }
pbjson-build = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
prettyplease = { workspace = true }
regex = { workspace = true }
