[package]
name = "zelox-sql-analyzer"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
zelox-common = { path = "../zelox-common" }
zelox-sql-parser = { path = "../zelox-sql-parser" }

thiserror = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
chumsky = { workspace = true }
either = { workspace = true }
log = { workspace = true }
