[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zelox-pyspark"
version = "0.2.0"
description = "PySpark-compatible client for Zelox — a Rust-native, JVM-free Spark Connect server"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pyspark[connect]>=4.0,<5",
]
keywords = ["spark", "pyspark", "zelox", "datafusion", "spark-connect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
pyarrow = ["pyarrow>=10.0"]
all = ["pandas>=1.5", "pyarrow>=10.0"]

[project.scripts]
zelox-pyspark = "zelox_pyspark.cli:main"

[project.urls]
Homepage = "https://github.com/vikashgargg/zelox"
Documentation = "https://github.com/vikashgargg/zelox/blob/main/MIGRATION.md"
Repository = "https://github.com/vikashgargg/zelox"
Issues = "https://github.com/vikashgargg/zelox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zelox_pyspark"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md"]
